terraform-multi-account/scripts/terraform-multi-env/environments/dev/target-group.tf
resource "aws_lb_target_group" "dev_nginx_tg" {
  name     = "dev-nginx-tg"
  port     = 80
  protocol = "HTTP"
  vpc_id   = var.vpc_id

  health_check {
    enabled             = true
    healthy_threshold   = 2
    unhealthy_threshold = 2
    timeout             = 5
    interval            = 30
    path                = "/"
    matcher             = "200"
  }

  tags = {
    Name = "dev-nginx-tg"
  }
}
